--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 
 dependencies:
@@ -15,6 +15,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
   flutter_screenutil: ^5.9.3
+  get: ^4.7.2
+  dio: ^5.9.0
+  intl: ^0.20.2
+  json_annotation: ^4.9.0
+  fl_chart: ^1.1.1
+
+
+
+
+
+
 
 
 
@@ -22,6 +33,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.10.1
+  json_serializable: ^6.11.1
+
 
 
 flutter:
